Images and Media

--- a/aboutus.html
+++ b/aboutus.html
@@ -23,7 +23,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="Navbar">
-                <a class="navbar-brand" href="./index.html">Ristorante con fusion</a>
+                <a class="navbar-brand" href="./index.html"><img src="img/logo.png" class="img-fluid" height="30" width="41"></a>
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item active"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
@@ -40,7 +40,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class = "col-12 col-sm self-aligh-center">
+                    <img src="img/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -66,7 +67,7 @@
             </div>
             <div class="col-sm">
                 <div class="card">
-                    <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
+                    <h3 class="card-header text-white" style="background-color:DarkOliveGreen;">Facts At a Glance</h3>
                     <div class="card-body">
                         <dl class="row">
                             <dt class="col-6">Started</dt>
