--- a/contactus.html
+++ b/contactus.html
@@ -123,7 +123,7 @@
                     </div>
                     <div class="form-group row">
                         <div class="col-md-6 offset-md-2">
-                            <input type="checkbox" class="form-checkbox" class="form-check-input" name="approve" id="aprovve" value="">
+                            <input type="checkbox" class="form-checkbox form-check-input" name="approve" id="aprovve" value="">
                             <label class="form-checkbox-label" for="aprovve"></label>
                             <strong>May we contact you?</strong>
                         </div>
