--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <label for="Non-smoking" class="col-md-2 col-form-label">Section</label>
                             <div class="btn-group btn-group-toggle" data-toggle="buttons">
                                 <label class="btn btn-secondary btn-success active">
-                                    <input type="radio" name="options" id="option1" checked> Non Smoking
+                                    <input type="radio" name="options" id="option1"> Non Smoking
                                 </label>
                                 <label class="btn btn-secondary btn-danger">
                                     <input type="radio" name="options" id="option2"> Smoking
@@ -194,6 +194,14 @@
                     </ol>
                     <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span></a>
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next"><span class="carousel-control-next-icon"></span></a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -290,6 +298,17 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('#mycarousel').carousel({interval:2000})
+            $('#carousel-pause').click(function(){
+                $('#mycarousel').carousel('pause')
+            })
+            $('#carousel-play').click(function(){
+                $('#mycarousel').carousel('cycle')
+            })
+        })
+    </script>
 </body>
 
 </html>
