--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="loginButton">
                         <span class="fa fa-sign-in"></span> Log In
                     </a>
                 </span>
@@ -83,7 +83,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class = "col-12 col-sm-3 align-self-center">
-                    <a role ="button" class="btn btn-warning btn-lg btn-block" data-toggle="modal" data-target="#reserveTableModal">Reserve table</a>
+                    <a id ="reserveTableButton" role ="button" class="btn btn-warning btn-lg btn-block">Reserve table</a>
                 </div>
             </div>
         </div>
@@ -306,6 +306,20 @@
                     $('#carouselButton').children('span').removeClass('fa-play');
                     $('#carouselButton').children('span').addClass('fa-pause');
                 }
+            });
+        });
+    </script>
+    <script>
+        $(document).ready(function(){
+            $('#reserveTableButton').click(function(){
+                $('#reserveTableModal').modal('show');
+            });
+        });
+    </script>
+    <script>
+        $(document).ready(function(){
+            $('#loginButton').click(function(){
+                $('#loginModal').modal('show');
             });
         });
     </script>
