--- a/contactus.html
+++ b/contactus.html
@@ -10,10 +10,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="css/styles.css" rel="stylesheet">
+    <!-- endbuild -->
 </head>
 
 <body>
@@ -95,19 +97,19 @@
             <div class="col-12 col-md-9">
                 <form>
                     <div class="form-group row">
-                        <label for "firstname" class="col-md-2 col-form-label">First Name</label>
+                        <label for="firstname" class="col-md-2 col-form-label">First Name</label>
                         <div class="col-md-10">
                             <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for "lastname" class="col-md-2 col-form-label">Last Name</label>
+                        <label for="lastname" class="col-md-2 col-form-label">Last Name</label>
                         <div class="col-md-10">
                             <input type="text" class="form-control" id="lasttname" name="lastname" placeholder="Last Name">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for "telnum" class="col-md-2 col-form-label">Contact Tel.</label>
+                        <label for="telnum" class="col-md-2 col-form-label">Contact Tel.</label>
                         <div class="col-5 col-md-3">
                             <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area Code">
                         </div>
@@ -116,7 +118,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for "emailid" class="col-md-2 col-form-label">Email</label>
+                        <label for="emailid" class="col-md-2 col-form-label">Email</label>
                         <div class="col-md-10">
                             <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email">
                         </div>
@@ -135,7 +137,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for "feedback" class="col-md-2 col-form-label">Your Feedback</label>
+                        <label for="feedback" class="col-md-2 col-form-label">Your Feedback</label>
                         <div class="col-md-10">
                             <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
                         </div>
@@ -198,10 +200,12 @@
         </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
