--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+    <!-- endbuild -->
 </head>
 
 <body>
@@ -99,7 +101,7 @@
                 <div class="modal-body">
                     <form>
                         <div class="form-group row">
-                            <label for "inlineRadio" class="col-md-2 col-form-label">Number of Guests</label>
+                            <label for="inlineRadio" class="col-md-2 col-form-label">Number of Guests</label>
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
                                 <label class="form-check-label" for="inlineRadio1">1</label>
@@ -137,7 +139,7 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for "date" class="col-md-2 col-form-label">Date and Time</label>
+                            <label for="date" class="col-md-2 col-form-label">Date and Time</label>
                             <div class="col-6 col-md-5">
                                 <input type="text" class="form-control" id="date" name="date" placeholder="Date">
                             </div>
@@ -289,11 +291,13 @@
            </div>
         </div>
     </footer>
-        <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
